# coco

./: BagofWords.cpp  CMakeLists.txt  README.md  algorithms.cpp  bow.cpp  bowmodel.cpp  bowpipeline.cpp  classdecoder.cpp  classencoder.cpp  common.cpp  main.cpp  ner.cpp  nermodel.cpp  pattern.cpp  patternmodel.cpp  pipeline.cpp  test_ner.cpp
include/: bow.h  bowmodel.h  classdecoder.h  classencoder.h  config.h  datatypes.h  ner.h  nermodel.h  pattern.h  patternmodel.h  patternstore.h
